Added Skills section

--- a/index-particles.html
+++ b/index-particles.html
@@ -65,7 +65,7 @@
 				<div class="top-menu">
 					<ul>
 						<li><a href="#about-section">About</a></li>
-						<li><a href="#services-section">What I Do</a></li>
+						<li><a href="#services-section">Skills</a></li>
 						<li><a href="#works-section">Projects</a></li>
 					</ul>
 					<a href="#" class="close"></a>
@@ -114,35 +114,36 @@
 			<div class="section services gray align-left" id="services-section">
 				<div class="fw">
 					<div class="titles animated">
-						<div class="title">What I Do</div>
+						<div class="title">Skills</div>
 					</div>
 					<div class="row">
 						<div class="col col-m-12 col-t-6 col-d-4">
 							<div class="service-item animated">
-								<div class="circle"><i class="icon ion ion-ios-browsers-outline"></i></div>
-								<div class="name">Game Development</div>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+								<div class="circle"><i class="icon ion ion-ios-game-controller-b-outline"></i></div>
+								<div class="name">Game Engines</div>
+								<p>Unity</p>
+								<p>Unreal</p>
 							</div>
 						</div>
 						<div class="col col-m-12 col-t-6 col-d-4">
 							<div class="service-item animated">
-								<div class="circle"><i class="icon ion ion-ios-lightbulb-outline"></i></div>
-								<div class="name">Animation</div>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+								<div class="circle"><i class="icon ion ion-code-working"></i></div>
+								<div class="name">Programming</div>
+								<p>C#</p>
+								<p>C++</p>
+								<p>HTML</p>
+								<p>CSS</p>
+								<p>Javascript</p>
 							</div>
 						</div>
 						<div class="col col-m-12 col-t-6 col-d-4">
 							<div class="service-item animated">
-								<div class="circle"><i class="icon ion ion-ios-color-wand-outline"></i></div>
-								<div class="name">Game Designing</div>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-							</div>
-						</div>
-						<div class="col col-m-12 col-t-6 col-d-4">
-							<div class="service-item animated">
-								<div class="circle"><i class="icon ion ion-social-android-outline"></i></div>
-								<div class="name">VFX</div>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+								<div class="circle"><i class="icon ion ion-android-walk"></i></div>
+								<div class="name">Art & Designing</div>
+								<p>3D Modeling</p>
+								<p>2D Animation</p>
+								<p>Visual Effects</p>
+								<p>Designing</p>
 							</div>
 						</div>
 					</div>
