Edited skills section

--- a/index-particles.html
+++ b/index-particles.html
@@ -121,29 +121,29 @@
 							<div class="service-item animated">
 								<div class="circle"><i class="icon ion ion-ios-game-controller-b-outline"></i></div>
 								<div class="name">Game Engines</div>
-								<p>Unity</p>
-								<p>Unreal</p>
+								<!-- <p>Unity</p>
+								<p>Unreal</p> -->
 							</div>
 						</div>
 						<div class="col col-m-12 col-t-6 col-d-4">
 							<div class="service-item animated">
 								<div class="circle"><i class="icon ion ion-code-working"></i></div>
 								<div class="name">Programming</div>
-								<p>C#</p>
+								<!-- <p>C#</p>
 								<p>C++</p>
 								<p>HTML</p>
 								<p>CSS</p>
-								<p>Javascript</p>
+								<p>Javascript</p> -->
 							</div>
 						</div>
 						<div class="col col-m-12 col-t-6 col-d-4">
 							<div class="service-item animated">
 								<div class="circle"><i class="icon ion ion-android-walk"></i></div>
 								<div class="name">Art & Designing</div>
-								<p>3D Modeling</p>
+								<!-- <p>3D Modeling</p>
 								<p>2D Animation</p>
 								<p>Visual Effects</p>
-								<p>Designing</p>
+								<p>Designing</p> -->
 							</div>
 						</div>
 					</div>
