--- a/index.html
+++ b/index.html
@@ -373,6 +373,34 @@
 								</div>
 							</div>
 						</div>
+						<div class="col col-m-12 col-t-6 col-d-6 box-item f-arcadeGames">
+							<div class="item animated">
+								<div class="desc">
+									<div class="image">
+										<a href="#breakout" class="has-popup"><img src="images/works/breakout.png" alt="" /></a>
+									</div>
+									<div class="category"></div>
+									<div class="name">
+										<a href="#breakout" class="has-popup">Breakout</a>
+									</div>
+								</div>
+							</div>
+							<div id="breakout" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image">
+										<img src="images/works/breakout.png" alt="">
+									</div>
+									<div class="desc">
+										<div class="category"></div>
+										<h4>breakout</h4>
+										<p>
+											Breakout is a thrilling reinvention of the classic arcade game Breakout, built in Unity with three levels of increasing difficulty. Players must use a paddle to bounce a ball and break through walls of bricks, all while avoiding obstacles and collecting power-ups. With its dynamic gameplay, vibrant visuals, and immersive sound effects, Breakout delivers an exciting and challenging experience that will keep players hooked.
+										</p>
+										<a href="https://github.com/Priyank-Prajapati/Breakout_Game.git" target="_blank" class="btn">Github Project Link</a>
+									</div>
+								</div>
+							</div>
+						</div>
 						<!-- <div class="col col-m-12 col-t-6 col-d-6 box-item f-branding">
 							<div class="item animated">
 								<div class="desc">
