Chnaged Fonts and some animation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 	
 	<!-- Load Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700%7CMontserrat:400,700%7CEczar:400,500,600,700,800" rel="stylesheet">
-	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/basic.css" />
 	<link rel="stylesheet" href="css/layout.css" />
@@ -78,7 +82,8 @@
 
 			<!-- Section Started -->
 			<div class="section started">
-				<div id="particles-bg" class="slide" style="background-image: url(images/bgImage.jpg);"></div>
+				<!-- id="particles-bg" -->
+				<div class="slide" style="background-image: url(images/bgImage.jpg);"></div>
 				<div class="centrize full-width">
 					<div class="vertical-center">
 						<div class="st-title align-center">
