--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 
 
 	<!-- CSS -->
@@ -99,7 +100,6 @@
 				</div>
 				<a href="#" class="mouse-btn"><i class="icon ion ion-chevron-down"></i></a>
 			</div>
-
 			<!-- Section About -->
 			<div class="section about align-left" id="about-section">
 				<div class="fw">
