Added pixel font

--- a/index.html
+++ b/index.html
@@ -8,26 +8,38 @@
 	<meta name="description" content="Priyank Prajapati Portfolio">
 	<meta name="keywords" content="">
 	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
-    script-src 'self' 'unsafe-inline' 'unsafe-eval'; 
+    script-src 'self'; 
     style-src 'self' 'unsafe-inline'; 
     img-src 'self' data:; 
-    font-src 'self' data:; 
+    font-src 'self'  https://fonts.gstatic.com; 
     object-src 'none'; 
     base-uri 'self'; 
     form-action 'self'; 
     frame-ancestors 'none'; 
     block-all-mixed-content; 
     upgrade-insecure-requests;">
+	<!-- <meta http-equiv="Content-Security-Policy" content="
+	default-src 'self' 'unsafe-inline' 'unsafe-eval'; 
+	script-src 'self'; 
+	style-src 'self'; 
+	img-src 'self' data:; 
+	font-src 'self' https://fonts.gstatic.com; 
+	object-src 'none'; 
+	base-uri 'self'; 
+	form-action 'self'; 
+	frame-ancestors 'none'; 
+	block-all-mixed-content; 
+	upgrade-insecure-requests;
+	"> -->
 	
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	
 	<!-- Load Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700%7CMontserrat:400,700%7CEczar:400,500,600,700,800" rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700%7CMontserrat:400,700%7CEczar:400,500,600,700,800" rel="stylesheet"> -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Pixelify+Sans:wght@400..700&family=Rubik+Pixels&display=swap" rel="stylesheet">
 
 
 	<!-- CSS -->
